feat:Adicionou docs para Profile e Address no API Docs
